--- a/paper/paper-DrexelFormat.tex
+++ b/paper/paper-DrexelFormat.tex
@@ -95,7 +95,7 @@ Our results show that using an intermediate number of neurons in the LSTM networ
 % ####################################################################################################################################
 \chapter{Introduction}\label{chap:intro}
 % ####################################################################################################################################
-Most people spend several hours per day for driving vehicle when they go to work, school or shopping. Modern car systems collect real-time data of the car status and driving behavior of the driver. Moreover, such recorded data is a very promising data source for healthcare and research, which has currently been rarely been used. This paper is done in the context of the {\em Diagnostic Driving} project, an NSF funded collaborative project between Drexel, Children Hospital of Philadelphia, George Mason University and the University of Central Florida that aims at studying the possibility of using driving behavior data to diagnose medical conditions.
+Most people spend several hours per day for driving vehicle when they go to work, school or shopping. Modern car systems collect real-time data of the car status and driving behavior of the driver. Moreover, such recorded data is a very promising data source for healthcare and research, which has currently rarely been used. This paper is done in the context of the {\em Diagnostic Driving} project, an NSF funded collaborative project between Drexel, Children Hospital of Philadelphia, George Mason University and the University of Central Florida that aims at studying the possibility of using driving behavior data to diagnose medical conditions.
 
 The paper focuses on the classification of driving simulation data from novice and expert drivers using several different neural network models. The task is thus, to predict, whether a new unseen before driver is an expert or a novice driving just by the data recorded from a driving simulator. Two datasets are used on the paper. The first dataset contains 16 traces from four drivers: two are inexpert drivers and two are expert drivers. Each drivers drove four different tracks. The second dataset is a modification of the first dataset but after having done feature selection manually to leave only the 23 features we considered most relevant. The three models used in this work are based on Long-Short Term Memory (LSTM) networks. The first model directly uses the second dataset to classify drivers using LSTMs. The second model uses a single layer auto-encoder to automatically reduce the dimensionality of first dataset and then classifies it via an LSTM. The last model uses a multiple layer auto-encoder to reduce the dimensionality of first dataset and then classifies it via an LSTM. 
 
